--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -1,6 +1,9 @@
 {
   "extends": "@repo/typescript-config/nextjs.json",
   "compilerOptions": {
+    "paths": {
+      "@repo/ui/*": ["../../packages/ui/*"]
+    },
     "plugins": [
       {
         "name": "next"
