--- a/package.json
+++ b/package.json
@@ -1,4 +1,3 @@
-
 {
   "name": "chess-mono",
   "private": true,
@@ -20,5 +19,10 @@
   "workspaces": [
     "apps/*",
     "packages/*"
-  ]
+  ],
+  "dependencies": {
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.4.49",
+    "tailwindcss": "^3.4.17"
+  }
 }
