--- a/packages/ui/tsconfig.json
+++ b/packages/ui/tsconfig.json
@@ -2,6 +2,7 @@
   "extends": "@repo/typescript-config/react-library.json",
   "compilerOptions": {
     "outDir": "dist",
+    "allowImportingTsExtensions": true,
     "paths": {
       "@repo/ui/*": ["./*"],
       "@repo/lib/*": ["./src/lib/*"]
