--- a/apps/web/components.json
+++ b/apps/web/components.json
@@ -4,7 +4,7 @@
   "rsc": true,
   "tsx": true,
   "tailwind": {
-    "config": "../../packages/ui/tailwind.config.ts",
+    "config": "tailwind.config.ts",
     "css": "../../packages/ui/src/styles/globals.css",
     "baseColor": "slate",
     "cssVariables": true
