--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "devDependencies": {
     "prettier": "^3.2.5",
+    "prisma": "^6.1.0",
     "turbo": "^2.3.3",
     "typescript": "5.5.4"
   },
@@ -21,6 +22,7 @@
     "packages/*"
   ],
   "dependencies": {
+    "@prisma/client": "^6.1.0",
     "autoprefixer": "^10.4.20",
     "postcss": "^8.4.49",
     "tailwindcss": "^3.4.17"
