--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -11,11 +11,10 @@
     "check-types": "tsc --noEmit"
   },
   "dependencies": {
-    "@auth/prisma-adapter": "^2.7.4",
-    "@hookform/resolvers": "^3.9.1",
-    "@radix-ui/react-slot": "^1.1.1",
-    "@repo/db": "*",
     "@repo/ui": "*",
+    "@repo/db": "*",
+    "@auth/prisma-adapter": "^2.7.4",
+    "@radix-ui/react-slot": "^1.1.1",
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -24,7 +23,7 @@
     "next-auth": "^5.0.0-beta.25",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "resend": "^4.0.1",
+    "react-icons": "^5.4.0",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.24.1"
