--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -11,10 +11,10 @@
     "check-types": "tsc --noEmit"
   },
   "dependencies": {
-    "@repo/ui": "*",
-    "@repo/db": "*",
     "@auth/prisma-adapter": "^2.7.4",
     "@radix-ui/react-slot": "^1.1.1",
+    "@repo/db": "*",
+    "@repo/ui": "*",
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -24,8 +24,11 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
+    "react-spinners": "^0.15.0",
+    "resend": "^4.0.1",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
+    "uuid": "^11.0.3",
     "zod": "^3.24.1"
   },
   "devDependencies": {
