--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@prisma/client": "^6.1.0",
     "autoprefixer": "^10.4.20",
     "postcss": "^8.4.49",
+    "react-spinners": "^0.15.0",
     "tailwindcss": "^3.4.17"
   }
 }
