--- a/apps/web/components.json
+++ b/apps/web/components.json
@@ -7,7 +7,8 @@
     "config": "tailwind.config.ts",
     "css": "../../packages/ui/src/styles/globals.css",
     "baseColor": "slate",
-    "cssVariables": true
+    "cssVariables": true,
+    "prefix": ""
   },
   "iconLibrary": "lucide",
   "aliases": {
