--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -13,6 +13,8 @@
   "dependencies": {
     "@auth/prisma-adapter": "^2.7.4",
     "@radix-ui/react-slot": "^1.1.1",
+    "@radix-ui/react-label": "^2.1.1",
+
     "@repo/db": "*",
     "@repo/ui": "*",
     "bcryptjs": "^2.4.3",
