--- a/packages/ui/components.json
+++ b/packages/ui/components.json
@@ -7,7 +7,9 @@
     "config": "tailwind.config.ts",
     "css": "./src/styles/globals.css",
     "baseColor": "slate",
-    "cssVariables": true
+    "cssVariables": true,
+    "prefix": ""
+
   },
   "iconLibrary": "lucide",
   "aliases": {
