--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "dev": "tsc -b && node ./dist/index"
+    "dev": "tsc -b && node ./dist/index",
+    "build": "tsc -b"
   },
   "keywords": [],
   "author": "",
