--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -40,6 +40,8 @@
     "@types/node": "^20",
     "@types/react": "18.3.1",
     "@types/react-dom": "18.3.0",
+    "@types/recoil": "^0.0.1",
+    "recoil": "^0.7.7",
     "typescript": "5.5.4"
   }
 }
