--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -20,8 +20,9 @@
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "jotai": "^2.11.0",
     "lucide-react": "^0.469.0",
-    "next": "^15.1.0",
+    "next": "^15.1.3",
     "next-auth": "^5.0.0-beta.25",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
@@ -40,8 +41,6 @@
     "@types/node": "^20",
     "@types/react": "18.3.1",
     "@types/react-dom": "18.3.0",
-    "@types/recoil": "^0.0.1",
-    "recoil": "^0.7.7",
     "typescript": "5.5.4"
   }
 }
