--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -4,6 +4,7 @@
   "type": "module",
   "private": true,
   "exports": {
+    "./avatar": "./src/components/avatar.tsx",
     "./button": "./src/components/button.tsx",
     "./card": "./src/components/card.tsx",
     "./form": "./src/components/form.tsx",
