--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -4,7 +4,8 @@
     "private": true,
     "type": "module",
     "exports": {
-      "./index": "./index.ts"
+      "./src": "./src",
+      "./dist": "./dist/index.js"
     },
     "dependencies": {
       "@prisma/client": "^6.1.0"
