--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -17,6 +17,7 @@
     "@radix-ui/react-slot": "^1.1.1",
     "@repo/db": "*",
     "@repo/ui": "*",
+    "@types/simple-peer": "^9.11.8",
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -29,6 +30,7 @@
     "react-icons": "^5.4.0",
     "react-spinners": "^0.15.0",
     "resend": "^4.0.1",
+    "simple-peer": "^9.11.1",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
     "uuid": "^11.0.3",
