--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "devDependencies": {
     "prettier": "^3.2.5",
-    "prisma": "^6.1.0",
+    "prisma": "^6.2.1",
     "turbo": "^2.3.3",
     "typescript": "5.5.4"
   },
@@ -22,10 +22,6 @@
     "packages/*"
   ],
   "dependencies": {
-    "@prisma/client": "^6.1.0",
-    "autoprefixer": "^10.4.20",
-    "postcss": "^8.4.49",
-    "react-spinners": "^0.15.0",
-    "tailwindcss": "^3.4.17"
+    "@auth/prisma-adapter": "^2.7.4"
   }
 }
