--- a/packages/db/tsconfig.json
+++ b/packages/db/tsconfig.json
@@ -2,11 +2,7 @@
     "extends": "@repo/typescript-config/base.json",
     "compilerOptions": {
         "outDir": "dist",
-        "rootDir": "src",
-        "paths": {
-          "@repo/ui/*": ["./*"],
-          "@repo/lib/*": ["./src/lib/*"]
-        }
+        "rootDir": "src"
       },
       "include": ["src"],
       "exclude": ["node_modules", "dist"]
