--- a/apps/bank_webhook/package.json
+++ b/apps/bank_webhook/package.json
@@ -4,13 +4,15 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "tsc -b && node dist/index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "express": "^5.0.0",
     "@repo/db": "*",
     "@types/express": "^5.0.0"
   }
