--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -5,7 +5,7 @@
     "type": "module",
     "exports": {
       "./index": "./src/*",
-      "./dist": "./dist/*"
+      "./dist": "./dist/index.js"
     },
     "dependencies": {
       "@prisma/client": "^6.1.0"
