--- a/apps/bank_webhook/package.json
+++ b/apps/bank_webhook/package.json
@@ -5,7 +5,9 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "tsc -b && node dist/index.js"
+    "build": "rm -rf dist && tsc -b",
+    "dev": "node dist/index.js",
+    "start": "npm run build && npm run dev"
   },
   "keywords": [],
   "author": "",
