--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,6 +17,6 @@ jobs:
             - name: Install dependencies
               run: npm install
             - name: Generate Prisma Client
-              run: cd db/packages/db && npx prisma generate
+              run: npm run db:generate
             - name: Build
               run: npm run build
