--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,7 +9,8 @@ jobs:
     build:
         runs-on: ubuntu-latest
         steps:
-            - uses: actions/checkout@v2
+            - name: Checkout Repo
+              uses: actions/checkout@v2
             - name: Use Node.js
               uses: actions/setup-node@v3
               with:
