--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,7 +22,7 @@ jobs:
               uses: docker/build-push-action@v2
               with:
                 context: .
-                file: ./Dockerfile
+                file: ./docker/Dockerfile.user-app
                 push: true
                 tags: ${{ secrets.DOCKER_USERNAME }}/paytm:latest
 
