--- a/apps/bank_webhook/package.json
+++ b/apps/bank_webhook/package.json
@@ -5,9 +5,7 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "rm -rf dist && tsc -b",
-    "dev": "node dist/index.js",
-    "start": "npm run build && npm run dev"
+    "dev": "npx tsc -b && node dist/index.js"
   },
   "keywords": [],
   "author": "",
