--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,7 +3,7 @@ name: Build and Deploy to DockerHub
 on:
   push:
     branches:
-      - master
+      - main
 
 jobs:
     build-and-push:
@@ -28,3 +28,17 @@ jobs:
 
             - name: Verify Pushed Image
               run: docker pull ${{ secrets.DOCKER_USERNAME }}/paytm:latest
+
+            - name: Deploy to EC2
+              uses: appleboy/ssh-action@master
+              with: 
+                host: ${{ secrets.SSH_HOST }}
+                username: ${{ secrets.SSH_USERNAME }}
+                key: ${{ secrets.SSH_KEY }}
+                script: |
+                    sudo docker pull ${{ secrets.DOCKER_USERNAME }}/paytm:latest
+                    sudo docker stop web-app || true
+                    sudo docker rm web-app || true
+                    sudo docker compose up
+                    rm -f key.pem
+            
