--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,3 +28,15 @@ jobs:
 
             - name: Verify Pushed Image
               run: docker pull ${{ secrets.DOCKER_USERNAME }}/paytm:latest
+
+            - name: Deploy to EC2
+              uses: appleboy/ssh-action@master
+              with: 
+                host: ${{ secrets.SSH_HOST }}
+                username: ${{ secrets.SSH_USERNAME }}
+                key: ${{ secrets.SSH_KEY }}
+                script: |
+                  sudo docker pull ${{ secrets.DOCKER_USERNAME }}/paytm:latest
+                  sudo docker stop paytm || true
+                  sudo docker rm paytm || true
+                  sudo docker run -d -p 3000:3000 --name paytm ${{ secrets.DOCKER_USERNAME }}/paytm:latest
