--- a/apps/user-app/.env
+++ b/apps/user-app/.env
@@ -11,4 +11,4 @@ GITHUB_ID="Ov23liBbq1MU8oy63qYC"
 GITHUB_SECRET="74c2c9a2a09a9a14c28de384d791d529c4a85e88"
 GOOGLE_SECRET="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GOCSPX-0tVFybGDlpGzh75vTONxYowVofQe"
 GOOGLE_ID="157938167523-94a6nschvs2a9bfe1907b89v8qrt5rfq.apps.googleusercontent.com"
-DOMAIN="http://localhost:3000"
+DOMAIN="http://localhost"
