--- a/packages/db/.env
+++ b/packages/db/.env
@@ -1,1 +1,1 @@
-DATABASE_URL="postgresql://neondb_owner:npg_rt2sw1WTPJlp@ep-white-bird-a84jbtvn-pooler.eastus2.azure.neon.tech/neondb?sslmode=requireb"
+DATABASE_URL="postgresql://karan:thakur@localhost:5432/db_karan"
