--- a/apps/primary-merchant/package.json
+++ b/apps/primary-merchant/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "@types/jsonwebtoken": "^9.0.9",
+    "bcryptjs": "^3.0.2",
     "cookie": "^1.0.2",
     "jsonwebtoken": "^9.0.2"
   }
