--- a/apps/user-app/.env
+++ b/apps/user-app/.env
@@ -5,8 +5,8 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 
-RESEND_KEY="re_NjiVXpsH_LKSwqhq2517KaaS7uz5YQk5C"
-AUTH_SECRET="secret"
+RESEND_KEY="re_R2UzbdPU_KT4QJru7oMHBLMz6PcQKrB4B"
+AUTH_SECRET="secret1"
 GITHUB_ID="Ov23liBbq1MU8oy63qYC"
 GITHUB_SECRET="74c2c9a2a09a9a14c28de384d791d529c4a85e88"
 GOOGLE_SECRET="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GOCSPX-0tVFybGDlpGzh75vTONxYowVofQe"
