--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -9,8 +9,9 @@
     "./card": "./src/components/card.tsx",
     "./form": "./src/components/form.tsx",
     "./input": "./src/components/input.tsx",
-    "./label": "./src/components/label.tsx", 
-    "./select": "./src/components/select.tsx"
+    "./label": "./src/components/label.tsx",
+    "./select": "./src/components/select.tsx",
+    "./dropdown-menu": "./src/components/dropdown-menu.tsx"
   },
   "scripts": {
     "lint": "eslint . --max-warnings 0",
@@ -27,7 +28,7 @@
   "dependencies": {
     "@hookform/resolvers": "^3.9.1",
     "@radix-ui/react-avatar": "^1.1.2",
-    "@radix-ui/react-dropdown-menu": "^2.1.4",
+    "@radix-ui/react-dropdown-menu": "^2.1.11",
     "@radix-ui/react-label": "^2.1.1",
     "@radix-ui/react-select": "^2.1.5",
     "@radix-ui/react-slot": "^1.1.1",
