--- a/apps/primary-merchant/package.json
+++ b/apps/primary-merchant/package.json
@@ -2,8 +2,9 @@
   "name": "primary-merchant",
   "version": "1.0.0",
   "main": "index.js",
+  "type": "module",
   "scripts": {
-    "start": "tsc -b && node dist/index.js"
+    "dev": "tsc -b && node dist/index.js"
   },
   "keywords": [],
   "author": "",
